<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_trans50"
    android:elevation="5dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noticeSubConst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/curve_line_blue"
        android:clickable="true"
        android:padding="20dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="263dp">

        <TextView
            android:id="@+id/title_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/deleteAllAlarm"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/closeIV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/closeIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_cancel_24" />

        <TextView
            android:id="@+id/subTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/deleteNoteSub"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_TV" />

        <TextView
            android:id="@+id/yesTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_radius_red10"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/deleteAll"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/lineN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTV" />

        <TextView
            android:id="@+id/lineN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTV" />

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_radius_blue10"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lineN"
            app:layout_constraintTop_toBottomOf="@+id/subTitleTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>