<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SetAlarmActivity">


    <include
        android:id="@+id/headingInclude"
        layout="@layout/layout_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/headingInclude"
        tools:layout_editor_absoluteX="53dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourRecycler"
                android:layout_width="wrap_content"
                android:layout_height="270dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toStartOf="@+id/columnTV"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/card_time" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/minRecycler"
                android:layout_width="wrap_content"
                android:layout_height="270dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@+id/columnTV"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/card_time" />

            <TextView
                android:id="@+id/columnTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/textColor"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/hourRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_card_color10"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/hourRecycler"
                app:layout_constraintEnd_toStartOf="@+id/hourRecycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/hourRecycler">

                <TextView
                    android:id="@+id/formatTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/format"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/hr12TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/round_radius_blue10"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="12H"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hr24TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="24H"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeTypeLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_card_color10"
                android:orientation="vertical"
                android:padding="3dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/hourRecycler"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minRecycler"
                app:layout_constraintTop_toTopOf="@+id/hourRecycler">

                <TextView
                    android:id="@+id/amTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/round_radius_blue10"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/am"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pmTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="7dp"
                    android:text="@string/pm"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/cardColor"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/hourRecycler">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_alarm_24"
                    app:tint="@color/greenColor" />

                <TextView
                    android:id="@+id/hourTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="~"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/colum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/hourRecycler"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/minTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="~"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/typeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ViewStub
                android:id="@+id/optionVS"
                android:inflatedId="@+id/optionVS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout="@layout/layout_alarm_options"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>